Sun Nov 22 19:36:51 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* ext/openssl/ossl.c: fix brew command for installation of openssl.
	  [ci skip][fix GH-1007] Patch by @arthurnn

Sun Nov 22 17:59:50 2015  Naohisa Goto  <ngotogenome@gmail.com>

	* configure.in: On Solaris, add -D_XOPEN_SOURCE=n only when both
	  AC_TRY_CPP and AC_TRY_COMPILE pass, because some options
	  (e.g. -std=iso9899:1999) are not set when running C preprocessor
	  or building ext.

Sun Nov 22 16:53:34 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_peephole_optimize): remove unreachable code
	  chunk after jump/leave.

	* parse.y: move dead code elimination of logical operation to
	  compile.c.  not to warn logical operation of literal constants.

Sun Nov 22 16:37:10 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_peephole_optimize): eliminate always/never
	  branches after a literal object and when the value is used after
	  the branch.

Sun Nov 22 01:23:43 2015  Naohisa Goto  <ngotogenome@gmail.com>

	* configure.in: Add -D_XOPEN_SOURCE=500 (or 600 or 700) on Solaris
	  if available, mainly for enabling some features in sockets.

Sun Nov 22 00:17:22 2015  Naohisa Goto  <ngotogenome@gmail.com>

	* test/socket/test_socket.rb (test/socket/test_socket.rb): skip
	  the test when Socket::SO_TIMESTAMP is not defined. Fix error
	  on Solaris 10. [Bug #11728] [ruby-dev:49377]

Sat Nov 21 18:57:28 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (need_argument): move frozen-string-literal-debug option
	  from --enable to --debug.  [Feature #11725]

	* ruby.c (proc_options): fix pointer overrun. do not advance argv
	  until it is valid.

Sat Nov 21 13:59:09 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/digest/sha1/extconf.rb: OpenSSL's struct name for SHA1 is
	  SHA_CTX. http://openssl.org/docs/man0.9.8/crypto/SHA1.html

Sat Nov 21 13:31:52 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/digest/*/*.[ch]: include ruby.h before digest.h to avoid